# slopify

./: .dockerignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
+devops/+production/: Jenkinsfile  docker-compose.full.yml.j2  inventory.yml
+devops/ansible/: setup_files.yml  setup_target.yml  start_service.yml
+devops/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
.github/workflows/: copilot-setup-steps.yml
backend/: .env.example  .gitignore  AGENTS.md  Cargo.toml  PROJECT_SHAPE.md
backend/migrations/: 0001_initial.sql  0002_threads.sql  0003_auth.sql  0004_openrouter_api_keys.sql  0005_thread_model_and_messages.sql  0006_system_prompts.sql
backend/scripts/: migrate.sh
backend/src/: app.rs  config.rs  main.rs  state.rs
backend/src/auth/: contracts.rs
backend/src/chat/: contracts.rs  mod.rs  streams.rs
backend/src/db/: migrate.rs  mod.rs
backend/src/http/: auth.rs  mod.rs  routes.rs
backend/src/http/handlers/: auth.rs  chat.rs  health.rs  mod.rs  openrouter_keys.rs  streams.rs  system_prompts.rs  threads.rs
backend/src/openrouter_keys/: contracts.rs
backend/src/providers/: openai_compatible.rs
backend/src/services/: auth_service.rs  chat_service.rs  mod.rs  openrouter_key_service.rs  system_prompt_service.rs  thread_service.rs
backend/src/storage/: mod.rs  openrouter_keys.rs  sessions.rs  system_prompts.rs  threads.rs  users.rs
backend/src/system_prompts/: contracts.rs
backend/src/threads/: contracts.rs
drizzle/: 0000_groovy_black_knight.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: .env.example  AGENTS.md  README.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.github/workflows/: copilot-setup-steps.yml
frontend/src/: app.html
src/: app.html
src/lib/: mock-data.ts
src/routes/: layout.css
(+54 files in other folders)
