[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
