[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.8", features = ["cors"] }
